# local-rag-system

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  OPERATIONS.md  RAG_PIPELINE.md  README.md  docker-compose.yml  entrypoint.sh  install.sh  manage_users.py  pyproject.toml  remove_tracked_ignored.sh  requirements.txt  settings.py  watcher_config.yaml
api/: embed.py  keyword_index.py  ollama_client.py  query_rag.py  retrieval.py  settings.py  timing.py
common/: __init__.py  config.py  index_state.py  paths.py  qdrant.py  sqlite_store.py  types.py
config/: watcher_config.container.yaml  watcher_config.windows.yaml  watcher_config.yaml
context/: 02-ai-system-future-architecture.md  DRY_SECURITY_REVIEW.md  MODEL_SWITCHING.md  STALE_CLEANUP.md  STOP_BUTTON_PLAN.md  SYSTEM_DESIGN.md  security_hardening_plan.md  web_interface_plan.md
context/architecture/: AI-GATEWAY-CONTEXT.md  RAG_SYSTEM_IMPLEMENTATION.md
context/improvements/: CODEBASE_MAINTAINABILITY_PLAN.md  IDLE_LOAD_MAINTAINABILITY_FINDINGS.md  INSTALLER_PLAN.md  MAINTAINABILITY_SPEC.md  README.md  RESPONSE_TIME_IMPLEMENTATION_PLAN.md  RESPONSE_TIME_IMPROVEMENTS.md  RETRIEVAL_FAILURE_HANDLING.md  SECURITY_ITEMS_2_6_IMPLEMENTATION.md  agentic-rag.md  code-review-findings-2026-05-28.md  grade-it-findings.md  live-code-mounts.md
context/operations/: INGESTION.md  MODEL-SWITCHING.md  RETRIEVAL.md
context/security/: DRY-SECURITY-REVIEW.md  SECRET-ROTATION-RUNBOOK.md  SECURITY-BACKLOG.md  SECURITY-HARDENING-PLAN.md  SECURITY-RISKS.md
indexer/: fingerprint_store.py  watcher.py
ingest/: chunkers.py  cleanup_stale.py  index_documents.py  purge_ignored.py  reset_collection.py  test_rag.py
scripts/: benchmark_rag.py  smoke_rag.py
tests/: conftest.py  test_api_server_concurrency.py  test_api_timeouts.py  test_auth.py  test_chunking.py  test_index_documents.py  test_ip_resolution.py  test_keyword_index.py  test_paths.py  test_purge_ignored.py  test_query_rag.py  test_rate_limit.py  test_request_validation.py  test_reset_collection.py  test_retrieval.py  test_retrieval_failure.py  test_retrieve_endpoint.py  test_security_hardening.py  test_settings.py  test_streaming.py  test_watcher.py
tests/integration/: conftest.py  test_reindexing.py
vector-db/qdrant/: docker-compose.yml
web/: api_server.py  auth.py  index.html  openai_compat.py  purify.min.js  rate_limit.py  schemas.py  user_store.py
web/static/: app.css  (+2 more)
windows/: Index-Documents.ps1  Install-Services.ps1  Start-ApiServer.ps1  Start-Qdrant.ps1  Start-Watcher.ps1
(+20 files in other folders)
