[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-system"
version = "0.1.0"
dependencies = [
    "qdrant-client",
    "sentence-transformers",
    "rank-bm25",
    "langchain-text-splitters",
    "watchdog",
    "pyyaml",
    "tqdm",
    "requests",
    "fastapi",
    "uvicorn",
    "bcrypt",
    "PyJWT",
]

[tool.setuptools]
py-modules = ["settings"]
packages = ["api", "ingest", "indexer", "web"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
