[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-system"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "qdrant-client",
    "sentence-transformers",
    "rank-bm25",
    "watchdog",
    "pyyaml",
    "tqdm",
    "requests",
    "fastapi",
    "uvicorn",
    "bcrypt",
    "PyJWT",
    "torch",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[tool.setuptools]
py-modules = ["settings"]
packages = ["api", "common", "ingest", "indexer", "web"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires live Qdrant and Ollama (deselect with -m 'not integration')",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
